--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+pytreebank==0.2.6
 nltk==3.4.3
 tqdm==4.32.1
-requests==2.22.0
-setuptools==40.6.3
 fasttext==0.8.3
 textblob==0.15.3
-lxml==4.3.0
 pandas==0.23.4
 flair==0.4.2
+allennlp==0.8.4
