--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ tqdm==4.32.1
 cython==0.29.3
 pandas==0.23.4
 nltk==3.4.3
-fasttext==0.8.3
 textblob==0.15.3
 flair==0.4.2
 allennlp==0.8.4
+fasttext
