Fix typo in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cython==0.29.3
 pandas==0.24.2
 nltk==3.4.3
 textblob==0.15.3
-pytorch==1.1.0
+torch==1.1.0
 pytorch-ignite==0.2.0
 pytorch-transformers==1.0.0
 fasttext==0.9.1
