--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 pytreebank==0.2.6
 tqdm==4.33.0
-cython==0.29.3
 pandas==0.25.0
 nltk==3.4.5
 textblob==0.15.3
 torch==1.1.0
 pytorch-ignite==0.2.0
 pytorch-transformers==1.0.0
-fasttext==0.9.1
+fasttext==0.9.2
 lime==0.1.1.36
 spacy==2.1.8
-# flair==0.4.2    # If not using flair, include this line
+# flair==0.4.2    # If using flair, uncomment this line
 # allennlp==0.8.4  # If using flair + elmo embeddings
